public interface IVerificavel {
    String realizarCheckup();
}
